--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ script: yarn build
 deploy:
   provider: pages
   skip_cleanup: true
+  github_token: $GITHUB_TOKEN
   local_dir: dist
   on:
     branch: master
